control panel added

--- a/src/app/auth/sign/sign.component.html
+++ b/src/app/auth/sign/sign.component.html
@@ -26,7 +26,7 @@
       </div>
       <!-- Button -->
       <div style="margin-top: 12.5%">
-        <p class="log-btn">Potvrdi</p>
+        <p [routerLink]="['/app/ControlPanel']" class="log-btn">Potvrdi</p>
   </div>
     </div>
   </div>
