--- a/src/app/appstack/landinglogged/landinglogged.component.html
+++ b/src/app/appstack/landinglogged/landinglogged.component.html
@@ -4,23 +4,27 @@
 
     <div class="modul">
 
-      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif">Zapocni</h2>
+      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif;font-size: xx-large">Zapocni</h2>
       <h2 style="color: gray;font-family: 'Gilroy ExtraBold',sans-serif">ucenje</h2>
-      <p style="font-family: 'Gilroy Light', sans-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p style="font-family: 'Gilroy Light', sans-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a [routerLink]="['/app/Predmeti']"> <p class="join-btn" mdbWavesEffect> Predmeti</p></a>
+
 
     </div>
 
     <div class="modul">
-      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif">Podesi</h2>
+      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif;font-size: xx-large">Podesi</h2>
       <h2 style="color: gray;font-family: 'Gilroy ExtraBold',sans-serif">skolu</h2>
+      <p style="font-family: 'Gilroy Light', sans-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a> <p class="join-btn" mdbWavesEffect> Postavke</p></a>
 
     </div>
 
     <div class="modul">
-      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif">Kontrolna</h2>
+      <h2 style="color: gray;font-family: 'Gilroy Light',sans-serif;font-size: xx-large">Kontrolna</h2>
         <h2 style="color: gray;font-family: 'Gilroy ExtraBold',sans-serif">ploca</h2>
-
+      <p style="font-family: 'Gilroy Light', sans-serif">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <a> <p class="join-btn" mdbWavesEffect> Otvori</p></a>
     </div>
 
   </div>
