--- a/src/app/appstack/landinglogged/landinglogged.component.scss
+++ b/src/app/appstack/landinglogged/landinglogged.component.scss
@@ -1,6 +1,6 @@
 .modul{
-  width: 40%;
-  height: 40%;
+  width: 50%;
+  height: 50%;
   margin-right: 10%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding-left: 10%;
@@ -13,3 +13,62 @@
 
 
 }
+.join-btn {
+  cursor: pointer;
+  all: unset;
+  font-family: 'Gilroy ExtraBold', sans-serif;
+  color: white;
+  padding: 10px;
+  font-size: 1.2rem;
+  text-transform: none;
+  padding-left: 40px;
+  text-decoration: none;
+  padding-right: 40px;
+  border-radius: 30px;
+  background-color: #0099CC;
+  margin-right:2px;
+
+
+}
+
+.join-btn:link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.join-btn:hover {
+  color: black;
+  cursor: pointer;
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 153,204, 1);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 1);
+
+}
+.log-btn {
+  cursor: pointer;
+  all: unset;
+  font-family: 'Gilroy ExtraBold', sans-serif;
+  color: black;
+  padding: 10px;
+  font-size: 1.2rem;
+  text-transform: none;
+  padding-left: 30px;
+  text-decoration: none;
+  padding-right: 30px;
+  border-radius: 30px;
+  margin-right:10px;
+}
+
+.log-btn:link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.log-btn:hover {
+  color: black;
+  cursor: pointer;
+  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 153, 204, 1);
+  box-shadow: 0px 5px 5px 0px rgba(0, 153, 204, 1);
+}
+
