--- a/src/app/appstack/predmeti/predmeti.component.html
+++ b/src/app/appstack/predmeti/predmeti.component.html
@@ -17,8 +17,8 @@ margin-left: 10%;
 
 
         <a><h1 style="color: #0099CC;font-family: 'Gilroy Light', sans-serif" >Predmeti</h1></a>
-        <a ><h1 [routerLink]="['/app/Zadaca']" style="font-family: 'Gilroy Light', sans-serif" >Zadaca</h1></a>
-        <a><h1 style="font-family: 'Gilroy Light', sans-serif">Ocjene</h1></a>
+        <a ><h1 [routerLink]="['/app/prof/Zadaca']" style="font-family: 'Gilroy Light', sans-serif" >Zadaca</h1></a>
+        <a><h1 [routerLink]="['/app/prof/Ocjene']"  style="font-family: 'Gilroy Light', sans-serif">Radovi</h1></a>
       </div>
 
     </div>
