--- a/src/app/appstack/ocjene/ocjene.component.scss
+++ b/src/app/appstack/ocjene/ocjene.component.scss
@@ -1,34 +1,34 @@
-.modul{
-  width: 60%;
-  height: 60%;
-  margin-right: 10%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  border-radius: 30%;
+::ng-deep.center-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   text-align: center;
-
-
-
-
+  align-items: center;
+  align-content: center;
 }
+
+.classOne{
+  width: 25%;
+  height: 25%;
+  margin-bottom: 75%;
+  object-fit: contain
+}
+
 .join-btn {
   cursor: pointer;
   all: unset;
   font-family: 'Gilroy ExtraBold', sans-serif;
   color: white;
-  padding: 10px;
-  font-size: 1.2rem;
+  padding: 15px;
+  font-size: 1.5rem;
   text-transform: none;
   padding-left: 40px;
   text-decoration: none;
   padding-right: 40px;
   border-radius: 30px;
   background-color: #0099CC;
-  margin-right:2px;
-
+  align-self: center;
+  text-align: center;
 
 }
 
