--- a/src/app/auth/navigacija/navigacija.component.html
+++ b/src/app/auth/navigacija/navigacija.component.html
@@ -1,6 +1,6 @@
 <mdb-navbar *ngIf="scrWidth < 990 ? true : true" SideClass="navbar navbar-expand-lg navbar-light white" [containerInside]="false">
   <mdb-navbar-brand style="width: 10%">
-    <a [routerLink]="[' ']"> <img src="../../../assets/Logo.png" style="width: 100%" ></a>
+    <a [routerLink]="['/# ']"> <img src="../../../assets/Logo.png" style="width: 100%" ></a>
   </mdb-navbar-brand>
 
   <links style="font-size: xx-large">
