--- a/src/app/land/land.component.html
+++ b/src/app/land/land.component.html
@@ -3,8 +3,8 @@
     <div style="width: 50%;padding: 2%;padding-right: 10%;padding-left: 5%">
       <h2 style="color:white;font-family: 'Gilroy Light', sans-serif;font-size: 75px">Dobrodošli na</h2>
       <h1 style="color: white;font-family: 'Gilroy ExtraBold', sans-serif;font-size: 100px ">FOCUS</h1>
-      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-    </div>
+      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Focus je online platforma za pohađanja nastavnih aktivnosti koja je za vrijeme pandemije COVID19. Focus omogućava brzu i jednostavnu razmjenu podataka između predavača i učenika, online ocjenjivanje sa zaštitom od varanja, online predavanja i još mnogo toga.
+        </div>
     <div style="width: 50%">
       <img src="../../../assets/ruksak.png" style="width: 90%">
     </div>
@@ -14,8 +14,7 @@
     <div style="width: 50%;padding: 2%;padding-right: 10%;padding-left: 5%;margin: 0 auto">
       <h2 style="color:white;font-family: 'Gilroy Light', sans-serif;font-size: 75px">Registrujte</h2>
       <h1 style="color: white;font-family: 'Gilroy ExtraBold', sans-serif;font-size: 100px ">ŠKOLU</h1>
-      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
-      <!--Reg button-->
+      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Registrujte svoju školu i započnite online nastavu!<!--Reg button-->
       <div style="margin-top: 15%">
         <p [routerLink]="['/auth/SignIn']" class="log-btn">Registracija</p>
       </div>
@@ -24,5 +23,5 @@
       <img src="../../../assets/knjige.png" style="width: 90%">
     </div>
   </div>
-</div>
+
 
