--- a/src/app/appstack/ocjene/ocjene.component.html
+++ b/src/app/appstack/ocjene/ocjene.component.html
@@ -41,7 +41,7 @@ margin-left: 10%;
 
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius:64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -67,7 +67,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -93,7 +93,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -123,7 +123,7 @@ margin-left: 10%;
 
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -149,7 +149,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -175,7 +175,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
