--- a/src/app/appstack/predmeti/predmeti.component.html
+++ b/src/app/appstack/predmeti/predmeti.component.html
@@ -35,9 +35,9 @@ margin-left: 10%;
 
   <!--card-->
     <div style="width:40%;margin-left: 2%">
-    <mdb-card style="border-radius: 20%;align-items: center">
+    <mdb-card style="border-radius: 64px;align-items: center">
       <!--Card image-->
-      <mdb-card-img src="../../../assets/bhs.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+      <mdb-card-img src="../../../assets/bhs.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
       <!--Card content-->
       <mdb-card-body>
 
@@ -52,9 +52,9 @@ margin-left: 10%;
     </div>
     <!--card-->
     <div style="width:40%;margin-left: 2%">
-      <mdb-card style="border-radius: 20%;align-items: center">
+      <mdb-card style="border-radius: 64px;align-items: center">
         <!--Card image-->
-        <mdb-card-img src="../../../assets/bhs.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+        <mdb-card-img src="../../../assets/bhs.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
         <!--Card content-->
         <mdb-card-body>
 
@@ -69,9 +69,9 @@ margin-left: 10%;
     </div>
     <!--card-->
     <div style="width:40%;margin-left: 2%">
-      <mdb-card style="border-radius: 20%;align-items: center">
+      <mdb-card style="border-radius: 64px;align-items: center">
         <!--Card image-->
-        <mdb-card-img src="../../../assets/bhs.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+        <mdb-card-img src="../../../assets/bhs.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
         <!--Card content-->
         <mdb-card-body>
 
@@ -93,7 +93,7 @@ margin-left: 10%;
       <div style="width:40%;margin-left: 2%">
         <mdb-card style="border-radius: 20%;align-items: center">
           <!--Card image-->
-          <mdb-card-img src="../../../assets/hi.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+          <mdb-card-img src="../../../assets/hi.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
           <!--Card content-->
           <mdb-card-body>
 
@@ -108,9 +108,9 @@ margin-left: 10%;
       </div>
       <!--card-->
       <div style="width:40%;margin-left: 2%">
-        <mdb-card style="border-radius: 20%;align-items: center">
+        <mdb-card style="border-radius: 64px;align-items: center">
           <!--Card image-->
-          <mdb-card-img src="../../../assets/hi.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+          <mdb-card-img src="../../../assets/hi.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
           <!--Card content-->
           <mdb-card-body>
 
@@ -125,9 +125,9 @@ margin-left: 10%;
       </div>
       <!--card-->
       <div style="width:40%;margin-left: 2%">
-        <mdb-card style="border-radius: 20%;align-items: center">
+        <mdb-card style="border-radius: 64px;align-items: center">
           <!--Card image-->
-          <mdb-card-img src="../../../assets/hi.png" style="width: 90%;height: auto;margin-top: 5%"></mdb-card-img>
+          <mdb-card-img src="../../../assets/hi.png" style="width: 70%;height: auto;margin-top: 5%"></mdb-card-img>
           <!--Card content-->
           <mdb-card-body>
 
