--- a/src/app/appstack/landinglogged/landinglogged.component.scss
+++ b/src/app/appstack/landinglogged/landinglogged.component.scss
@@ -7,7 +7,7 @@
   padding-right: 10%;
   padding-top: 5%;
   padding-bottom: 5%;
-  border-radius: 30%;
+  border-radius: 64px;
   text-align: center;
 
 
