--- a/src/app/appstack/ocjeneucenici/ocjeneucenici.component.html
+++ b/src/app/appstack/ocjeneucenici/ocjeneucenici.component.html
@@ -41,7 +41,7 @@ margin-left: 10%;
 
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -63,7 +63,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -85,7 +85,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -110,7 +110,7 @@ margin-left: 10%;
 
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -132,7 +132,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
@@ -154,7 +154,7 @@ margin-left: 10%;
           </div>
           <!--card-->
           <div style="width:40%;margin-left: 2%">
-            <mdb-card style="border-radius: 20%;align-items: center;border:1px solid #0099CC">
+            <mdb-card style="border-radius: 64px;align-items: center;">
               <!--Card image-->
               <!--Card content-->
               <mdb-card-body>
