--- a/src/app/land/land.component.scss
+++ b/src/app/land/land.component.scss
@@ -15,7 +15,7 @@
   padding-bottom: 5%;
   padding-left: 2%;
   padding-right: 2%;
-  border-radius: 10%;
+  border-radius: 64px;
   margin: 0 auto;
 
 }
