--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,10 @@
-<div style="background-color: #0099CC;width: 100%;padding: 1%;border-top: 0.02rem solid black">
+<div style="background-color: #303030;width: 100%;padding: 1%;border-top: 0.02rem solid black">
 
   <div style="display: flex;justify-content: center;align-content: center;margin-top: 1%;margin-bottom: 1%">
-    <h5 style="font-family: 'Gilroy ExtraBold', sans-serif">Trenutna verzija applikacije nije stabilna za mobilne telefone</h5>
+    <div style="display: flex;justify-content: center;align-content: center;flex-direction: column;align-items: center">
+    <h5 style="font-family: 'Gilroy ExtraBold', sans-serif;color: white">Razvijeno od strane Debugger Team-a</h5>
+    <img src="../../assets/debbuger_2.png" style="width: 5%;height:auto">
+    </div>
   </div>
 
 </div>
