--- a/src/app/land/land.component.html
+++ b/src/app/land/land.component.html
@@ -3,7 +3,7 @@
     <div style="width: 50%;padding: 2%;padding-right: 10%;padding-left: 5%">
       <h2 style="color:white;font-family: 'Gilroy Light', sans-serif;font-size: 75px">Dobrodošli na</h2>
       <h1 style="color: white;font-family: 'Gilroy ExtraBold', sans-serif;font-size: 100px ">FOCUS</h1>
-      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Focus je online platforma za pohađanja nastavnih aktivnosti koja je za vrijeme pandemije COVID19. Focus omogućava brzu i jednostavnu razmjenu podataka između predavača i učenika, online ocjenjivanje sa zaštitom od varanja, online predavanja i još mnogo toga.
+      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: x-large">Focus je online platforma za pohađanja nastavnih aktivnosti koja je za vrijeme pandemije COVID19. Focus omogućava brzu i jednostavnu razmjenu podataka između predavača i učenika, online ocjenjivanje sa zaštitom od varanja, online predavanja i još mnogo toga.
         </div>
     <div style="width: 50%">
       <img src="../../../assets/ruksak.png" style="width: 90%">
@@ -14,7 +14,7 @@
     <div style="width: 50%;padding: 2%;padding-right: 10%;padding-left: 5%;margin: 0 auto">
       <h2 style="color:white;font-family: 'Gilroy Light', sans-serif;font-size: 75px">Registrujte</h2>
       <h1 style="color: white;font-family: 'Gilroy ExtraBold', sans-serif;font-size: 100px ">ŠKOLU</h1>
-      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: large">Registrujte svoju školu i započnite online nastavu!<!--Reg button-->
+      <p style="font-family: 'Gilroy Light', sans-serif;color: white;font-size: x-large">Registrujte svoju školu i započnite online nastavu!<!--Reg button-->
       <div style="margin-top: 15%">
         <p [routerLink]="['/auth/SignIn']" class="log-btn">Registracija</p>
       </div>
